add missing CI installation step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: Run integration tests
         run: |
+          make install
           make test
 
       - name: Print logs
