slight refactoring, extend README, add test-lambda to CI builds

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           make install
           make test
+          make test-lambda
 
       - name: Print logs
         if: always()
