--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,15 @@ jobs:
           make install
           make test
 
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Run Lambda integration tests
+        run: |
+          pip install terraform-local
+          make tf-deploy
+          make test-lambda
+
       - name: Print logs
         if: always()
         run: |
